# dataTechnicalSE

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/datatechnicalse/: __init__.py  downloader.py  main.py  parser.py  storage.py  transformer.py
tests/integration/: test_pipeline.py
tests/unit/: test_downloader.py  test_parser.py  test_placeholder.py  test_save.py  test_transformer.py
