[project]
name = "datatechnicalse"
version = "0.1.0"
description = "SteelEye Data Engineer Technical Assessment"
readme = "README.md"
authors = [
    { name = "Rui Gonçalves" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "fsspec>=2024.0",
    "s3fs>=2024.0",
    "adlfs>=2024.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 79
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 79

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
